--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Fox Pet</title>
+    <title>Fox Game</title>
     <link rel="stylesheet" href="./sprites.css" />
     <link rel="stylesheet" href="./style.css" />
   </head>
 
   <body>
+    <nav class="navbar">Fox Game</nav>
     <div class="container">
       <div class="inner">
         <div class="game day"></div>
